# sphinxcontrib-httpexample

./: .coveragerc  .coveralls.yml  .gitignore  .readthedocs.yaml  .travis.yml  .treefmt.toml  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  Makefile  Makefile.nix  README.md  README.rst  default.nix  devenv.nix  devenv.uv2nix.nix  devenv.yaml  flake.nix  pyproject.toml  qa.cfg  release.nix  requirements-python27-docutils016.txt  requirements-python27.nix  requirements-python27.txt  requirements-python310-docutils016.txt  requirements-python310.txt  requirements-python36.txt  requirements-python37-docutils016.txt  requirements-python37.txt  requirements-python38.txt  requirements-python39-docutils016.txt  requirements-python39.nix  requirements-python39.txt  requirements.nix  requirements.txt  setup.cfg  setup.nix  setup.py  shell.nix  tox.ini
.github/workflows/: build.yml  rtd-pr-preview.yml
devenv/modules/: python.nix  vscode.nix
docs/: conf.py  custom.rst  examples.rst  index.rst  plone_client.py  requirements.txt  usage.rst
docs/_static/: sphinxcontrib-httpexample.css  sphinxcontrib-httpexample.js
nix/: default.nix  poetry-python310-docutils016.toml  poetry-python310-docutils017.toml  poetry-python310-docutils018.toml  poetry-python310-docutils019.toml  poetry-python310-docutils020.toml  poetry-python311-docutils016.toml  poetry-python311-docutils017.toml  poetry-python311-docutils018.toml  poetry-python311-docutils019.toml  poetry-python311-docutils020.toml  poetry-python311-plone-sphinx-theme.toml  poetry-python39-.toml  poetry-python39-docutils016.toml  poetry-python39-docutils017.toml  poetry-python39-docutils018.toml  poetry-python39-docutils019.toml  poetry-python39-docutils020.toml  requirements-python27-docutils016.nix  requirements-python27-docutils016.txt  requirements-python27-docutils017.nix  requirements-python27-docutils017.txt  requirements-python27.nix  requirements-python36.nix  requirements-python37.nix  requirements-python38.nix  requirements-python39.nix  sources.json
nix-support/: Makefile  default.nix  nixpkgs.nix  overrides.nix  pip2nix.nix  requirements.nix
src/sphinxcontrib/httpexample/: __init__.py  builders.py  directives.py  lexers.py  parsers.py  utils.py
src/sphinxcontrib/httpexample/static/: sphinxcontrib-httpexample.css  sphinxcontrib-httpexample.js
tests/: __init__.py  test_builders.py  test_directives.py  test_doctest.py  test_fixtures.py  test_lexers.py  test_parser.py  test_parsers.py  test_sphinx.py  test_utils.py
tests/data/: 001.request.txt  001.response.txt  002.request.txt  002.response.txt
tests/fixtures/: 001.curl.txt  001.httpie.txt  001.request.txt  001.response.txt  001.wget.txt  002.curl.txt  002.httpie.txt  002.python-requests.txt  002.request.txt  002.response.txt  002.wget.txt  003.curl.txt  003.httpie.txt  003.python-requests.txt  003.request.txt  003.wget.txt  004.curl.txt  004.httpie.txt  004.python-requests.txt  004.request.txt  004.response.txt  004.wget.txt  005.curl.txt  005.httpie.txt  005.python-requests.txt  005.request.txt  005.wget.txt  006.curl.txt  006.httpie.txt  006.python-requests.txt  006.request.txt  006.response.txt  006.wget.txt  007.curl.txt  007.httpie.txt  007.python-requests.txt  007.request.txt  007.wget.txt  008.request.txt  009.request.txt  (+5 more)
tests/snapshots/: snap_test_builders.py
