[project]
name = "sphinxcontrib-httpexample"
version = "2.0.dev0"
description = "Adds example directive for sphinx-contrib httpdomain"
readme = "README.md"
keywords = ["sphinx", "extension", "http", "rest", "documentation"]
authors = [
    {name = "Asko Soukka", email = "asko.soukka@iki.fi"}
]
license = {text="GPL-2.0-only"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Utilities"
]
urls = { "Repository" = "https://github.com/collective/sphinxcontrib-httpexample"}
requires-python = ">= 3.9"
dependencies =[
    "astunparse",
    "docutils",
    "importlib-metadata",
    "importlib-resources",
    "sphinx",
    "sphinxcontrib-httpdomain",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sphinxcontrib", "src/sphinxcontrib/httpexample"]
exclude = ["tests"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coverage>=7.7.1",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "snapshottest>=0.6.0",
    "sphinx-autobuild",
    "sphinx-design",
    "sphinx-inline-tabs",
    "sphinx-rtd-theme",
    "sphinx-testing",
    "zest-releaser>=9.4.0",
]

[project.optional-dependencies]
test = []

sphinx823 = [
    "sphinx==8.2.3; python_version >= '3.11'"
]
sphinx813 = [
    "babel",
    "sphinx==8.1.3; python_version >= '3.10'"
]
sphinx802 = [
    "sphinx==8.0.2; python_version >= '3.10'"
]
sphinx747 = [
    "sphinx==7.4.7; python_version >= '3.9'"
]
sphinx621 = [
    "sphinx==6.2.1; python_version >= '3.9'"
]
sphinx530 = [
    "sphinx==5.3.0; python_version >= '3.9'"
]
sphinx450 = [
    "sphinx==4.5.0; python_version >= '3.9'"
]
sphinx354 = [
    "sphinx==3.5.4; python_version >= '3.9'"
]
#sphinx245 = [
#    "sphinx==2.4.5; python_version >= '3.9'"
#]
#sphinx186 = [
#    "sphinx==1.8.6; python_version >= '3.9'"
#]

[tool.uv]
conflicts = [
    [
      { extra = "sphinx823" },
      { extra = "sphinx813" },
      { extra = "sphinx802" },
      { extra = "sphinx747" },
      { extra = "sphinx621" },
      { extra = "sphinx530" },
      { extra = "sphinx450" },
      { extra = "sphinx354" },
#     { extra = "sphinx245" },
#     { extra = "sphinx186" },
    ],
]

[tool.isort]
force_alphabetical_sort_within_sections = true
force_single_line = true
from_first = true
line_length = 200
lines_after_imports = 2
lines_between_types = 0
no_sections = true
