[metadata]
name = sphinxcontrib-httpexample
version = 0.9.1.dev0
description = Adds example directive for sphinx-contrib httpdomain
long_description = file: README.rst, CHANGELOG.rst
keywords = sphinx, extension, http, rest, documentation
author = Asko Soukka
author_email = asko.soukka@iki.fi
url = https://github.com/collective/sphinxcontrib-httpexample
license = GPL version 2
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Documentation
    Topic :: Utilities

[options]
setup_requires =
    pytest-runner
install_requires =
    astunparse
    docutils
    sphinx
    sphinxcontrib-httpdomain
tests_require =
    pytest
    snapshottest
    sphinx_rtd_theme
    sphinx-testing
package_dir =
    = src
packages = find:
namespace_packages =
    sphinxcontrib
zip_safe = False

[options.package_data]
* = static/*

[options.packages.find]
where =
    src

[check-manifest]
ignore =
    *.cfg
    .coveragerc
    .editorconfig
    .gitattributes

[aliases]
test = pytest

[flake8]
exclude = .git,__pycache__,build,dist
max-complexity = 20

[isort]
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2
line_length = 200
not_skip = __init__.py

[bdist_wheel]
universal = 1
